--- a/src/Telepathic/Resources/Styles/Colors.telepathic.xaml
+++ b/src/Telepathic/Resources/Styles/Colors.telepathic.xaml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="UTF-8" ?>
 <?xaml-comp compile="true" ?>
-<ResourceDictionary 
+<ResourceDictionary
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
@@ -28,52 +28,42 @@
     <Color x:Key="Gray950">#141414</Color>
 
     <toolkit:AppThemeColor x:Key="Primary"
-        Light="#D4A017"
-        Dark="#D4A017" />
+                           Light="#D4A017"
+                           Dark="#D4A017"/>
 
     <toolkit:AppThemeColor x:Key="Background"
-        Light="#F2E8C4"
-        Dark="#1F1F1F" />
+                           Light="#F2E8C4"
+                           Dark="#1F1F1F"/>
 
     <toolkit:AppThemeColor x:Key="OnBackground"
-        Light="#1F1F1F"
-        Dark="#F2E8C4" />
+                           Light="#1F1F1F"
+                           Dark="#F2E8C4"/>
 
     <toolkit:AppThemeColor x:Key="Surface1"
-        Light="#FFF7E6"
-        Dark="#292929" />
+                           Light="#FFF7E6"
+                           Dark="#292929"/>
 
     <toolkit:AppThemeColor x:Key="PlaceholderColor"
-        Light="{StaticResource Gray200}"
-        Dark="{StaticResource Gray500}" />
+                           Light="{StaticResource Gray200}"
+                           Dark="{StaticResource Gray500}"/>
 
     <toolkit:AppThemeColor x:Key="DisabledColor"
-        Light="{StaticResource Gray300}"
-        Dark="{StaticResource Gray600}" />
+                           Light="{StaticResource Gray300}"
+                           Dark="{StaticResource Gray600}"/>
 
     <Color x:Key="LightBackground">#F2F2F2</Color>
     <Color x:Key="DarkBackground">#17171a</Color>
     <Color x:Key="LightSurface1">#E0E0E0</Color>
     <Color x:Key="DarkSurface1">#222228</Color>
 
-    <LinearGradientBrush x:Key="AIBrush" StartPoint="0,1" EndPoint="1,0">
-        <GradientStop Color="#D4A017" Offset="1.0" />
-        <GradientStop Color="#317271" Offset="0.5" />
-        <GradientStop Color="#1F1F1F" Offset="0.0" />
+    <LinearGradientBrush x:Key="AIBrush"
+            StartPoint="0,1"
+            EndPoint="1,0">
+        <GradientStop Color="#D4A017"
+                Offset="1.0"/>
+        <GradientStop Color="#317271"
+                Offset="0.5"/>
+        <GradientStop Color="#1F1F1F"
+                Offset="0.0"/>
     </LinearGradientBrush>
-
-    <!-- <SolidColorBrush x:Key="PrimaryBrush" Color="{StaticResource Primary}"/>
-    <SolidColorBrush x:Key="SecondaryBrush" Color="{StaticResource Secondary}"/>
-    <SolidColorBrush x:Key="TertiaryBrush" Color="{StaticResource Tertiary}"/>
-    <SolidColorBrush x:Key="WhiteBrush" Color="{StaticResource White}"/>
-    <SolidColorBrush x:Key="BlackBrush" Color="{StaticResource Black}"/>
-
-    <SolidColorBrush x:Key="Gray100Brush" Color="{StaticResource Gray100}"/>
-    <SolidColorBrush x:Key="Gray200Brush" Color="{StaticResource Gray200}"/>
-    <SolidColorBrush x:Key="Gray300Brush" Color="{StaticResource Gray300}"/>
-    <SolidColorBrush x:Key="Gray400Brush" Color="{StaticResource Gray400}"/>
-    <SolidColorBrush x:Key="Gray500Brush" Color="{StaticResource Gray500}"/>
-    <SolidColorBrush x:Key="Gray600Brush" Color="{StaticResource Gray600}"/>
-    <SolidColorBrush x:Key="Gray900Brush" Color="{StaticResource Gray900}"/>
-    <SolidColorBrush x:Key="Gray950Brush" Color="{StaticResource Gray950}"/> -->
 </ResourceDictionary>
