Refactor services and update bindings for improved functionality and clarity

--- a/src/Telepathic/Pages/ProjectDetailPage.xaml
+++ b/src/Telepathic/Pages/ProjectDetailPage.xaml
@@ -13,6 +13,7 @@
              x:Class="Telepathic.Pages.ProjectDetailPage"
              x:DataType="pageModels:ProjectDetailPageModel"
              SafeAreaEdges="None"
+             x:Name="ThisPage"
              Title="Project">
 
     <ContentPage.Resources>
@@ -100,6 +101,7 @@
                         Text="{Binding Name}">
                         <Entry.Behaviors>
                             <toolkit:EventToCommandBehavior EventName="Unfocused"
+                                                            BindingContext="{Binding Path=BindingContext, Source={x:Reference ThisPage}, x:DataType=ContentPage}"
                                                             Command="{Binding NameUnfocusedCommand}"/>
                         </Entry.Behaviors>
                     </Entry>
